--- a/app/src/main/res/layout/fragment_read.xml
+++ b/app/src/main/res/layout/fragment_read.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".ui.LegendActivity">
 
 
     <EditText
@@ -52,7 +53,12 @@
             android:entries="@array/legend_gold"
             />
 
-
+        <ImageView
+            android:id = "@+id/legend_img"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_centerInParent="true"
+            />
     </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
