--- a/app/src/main/res/layout/fragment_read.xml
+++ b/app/src/main/res/layout/fragment_read.xml
@@ -31,6 +31,7 @@
             android:id="@+id/legend_damage_type"
             android:layout_width="100dp"
             android:layout_height="40dp"
+            android:spinnerMode="dialog"
             android:layout_toEndOf="@id/legend_position"
             android:layout_toRightOf="@id/legend_position"
             android:entries="@array/legend_damage_type"
@@ -68,6 +69,11 @@
             android:layout_height="200dp"
             android:layout_centerInParent="true"
             />
+        <TextView
+            android:id="@+id/testText"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/legend_img"/>
     </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
