LOL助手最终版“

--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -63,7 +63,7 @@
     </LinearLayout>
 
     <ListView
-        android:id="@+id/legend_news_list"
+        android:id="@+id/lvNews"
         android:divider="#ccc"
         android:dividerHeight="5dp"
         android:layout_width="match_parent"
@@ -71,15 +71,6 @@
         />
 
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/news_viewpager"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
-    
-    <WebView
-        android:id="@+id/webView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+
 
 </LinearLayout>
